Fixed scrollbar on settings page

--- a/dash/css/dash.css
+++ b/dash/css/dash.css
@@ -175,7 +175,7 @@ body {
   left: 0;
   right: 0;
   width: 50%;
-  padding: 1em 1em 2em 1em;
+  padding: 1em 1em 1em 1em;
   box-shadow: 0px 0px 5px rgba(0,0,0,0.75);
   border-radius: 3px;
   background-color: #ffffff;
@@ -258,7 +258,7 @@ h3 a:hover, h4 a:hover {
 }
 #fulljob.fjsettings {
   margin: 2em auto 0 auto;
-  height: 520px;
+  height: 525px;
   border-radius: 5px;
 }
 .fjsettings #fjbody {
